--- a/style.css
+++ b/style.css
@@ -13,3 +13,11 @@ body {
 .nav {
     text-align: center;
 }
+
+.nav li {
+    display: inline;
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 40px;
+    margin-left: 40px;
+}
