--- a/style.css
+++ b/style.css
@@ -78,3 +78,12 @@ body {
     border-bottom: 1px solid #FFD700;
     text-align: justify;
 }
+
+.me {
+    text-align: justify;
+}
+
+.me img{
+    float: left;
+    padding-right: 10px;
+}
