--- a/style.css
+++ b/style.css
@@ -95,3 +95,9 @@ body {
     padding-right: 10px;
     padding-bottom: 10px;
 }
+
+.courses li {
+    list-style-type: none;
+    width: 900px;
+    height: 210px;
+}
