--- a/style.css
+++ b/style.css
@@ -127,3 +127,9 @@ input[type="button"] {
     font-size: 20px;
 }
 
+textarea {
+    margin-top: 5px;
+    width: 600px;
+    height: 400px;
+    border: 1px solid #FFD700;
+}
