--- a/style.css
+++ b/style.css
@@ -133,3 +133,12 @@ textarea {
     height: 400px;
     border: 1px solid #FFD700;
 }
+
+form {
+    margin-top: 100px;
+    padding-left: 250px;
+}
+
+form p {
+    font-size: 20px;
+}
