--- a/style.css
+++ b/style.css
@@ -146,3 +146,12 @@ form p {
 .calendar tr, td{
     border: 1px solid #aaaaaa;
 }
+
+.calendar {
+    margin-top: 100px;
+}
+
+.calendar thead {
+    background: #000000;
+    color: #ffffff;
+}
